# ResNet50-LogisticRegression-Dementia-Classification

./: License.txt  README.md  pyproject.toml
LogisticRegression/: Explainable_Logistic_Regression.ipynb  Final_Logistic_Regression.ipynb  README.md
ProcessingData/: Preprocessing_For_Alzheimer's_Prediction.ipynb  README.md  Updated_Feature_Extraction_For_Alzheimer's_Prediction.ipynb
ResNet50Notebook/: Final_Version_of_Best_ResNet.ipynb  README.md
configs/: README.md
data/: Dataset_Import.ipynb  README.md
layers/: README.md
models/: README.md
saved_models/: README.md
utils/: README.md
