[project]
name = "resnet50-logisticregression-dementia"
version = "0.1.0"
description = "Dementia Classification using ResNet50 and Logistic Regression"
requires-python = ">=3.10" 
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
    "nibabel>=5.0",  
    "pandas>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24"
]

[tool.uv]
locked = true
dev-dependencies = ["pytest", "black"]  

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
