[project]
name = "dementia-classification"
version = "0.1.0"
description = "ResNet50 and Logistic Regression for Dementia Classification"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.8"

dependencies = [
    "torch",
    "torchvision",  # Use for ResNet50
    "scikit-learn",
    "nibabel",  # Use for MRI
    "matplotlib",
    "numpy",
    "pandas",
    "jupyterlab",  # Use for Jupyter Notebooks
    "pillow",  # Use for image processing
]
